--- a/trainingConfig_classification.json
+++ b/trainingConfig_classification.json
@@ -1,35 +1,37 @@
 {
 "data_dir":"./data/train",
 "csv_dir": "./csv",
-"out_dir": "./output",
+"out_dir": "./output_classification(new)",
 "lr":0.001,
 "batch_size":16,
 "optimizer":"adam",
-"EPOCHS":200,
-"lossConfig":
-    {
-    "BCE":0.5,
-    "DICE":0.5
-    },
-"empty_num":0.78,
+"EPOCHS":1000,
 "augmentation":
     {
-    "doRigid":true,
+    "doRigid":false,
     "tRan":[-5,5],
-    "rRan":[-5,5],
+    "rRan":[-20,20],
     "doNoise":true,
     "std":0.02,
     "doFlip":true,
     "probH":0.5,
     "probV":0.5,
-    "doCrop":true,
-    "cropSize":[384,384]
+    "doCrop":false,
+    "cropSize":[400,400]
     },
 "networkConfig":
     {
     "dim":2,
+    "imSize":[512,512],
     "inputChannel":1,
-    "outputChannel":1,
+    "featureNum":[
+                  [32,16,8,4],
+                  [32,16,8,4]
+                  ],
+    "dropout": [
+                [0.5,0.5,0.5,0.5],
+                [0.5,0.5,0.5,0.5]
+                ],
     "nLevel":2,
     "dsFactor": [2,1],
     "kernelSize": [
@@ -38,7 +40,7 @@
                   ],
     "channelNum": [
                    [16,16,32,64,128,256],
-                   [16,16,32,64,128,256]  
+                   [16,16,32,64,128,256] 
                   ],
     "channelDropout": [
                           [0,0,0.1,0.2,0.3,0.4],
